fixing layout bugs

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,4 @@
 footer {
-  margin: 0em -0.5em -0.5em -0.5em;
   background-color: black;
   padding: 1em 2em;
   color: white;
