--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,10 +1,11 @@
 body {
-    font-family: RijksText, Arial, sans-serif;;
+    font-family: RijksText, Arial, sans-serif;
     background-color: white;
     color: #343537;
+    margin: 0;
 }
 
-*{
+* {
     box-sizing: border-box;
 }
 
